# duckdb_msgpack_extension

./: .gitignore  CMakeLists.txt  Makefile  README.md  msgpack-extension.cpp  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml
data/: convert_json_to_msgpack.py  nation.msgpack
include/: msgpack-extension.hpp
src/: CMakeLists.txt  buffered_msgpack_reader.cpp  duckdb_msgpack_extension.cpp  msgpack-extension.cpp  msgpack_extension.cpp  msgpack_maps_extension.cpp  msgpack_scan.cpp  msgpack_transform.cpp
src/include/: buffered_msgpack_reader.hpp  duckdb_msgpack_extension.hpp  msgpack-extension.hpp  msgpack_extension.hpp  msgpack_maps_extension.hpp  msgpack_scan.hpp  msgpack_transform.hpp
test/sql/: read_msgpack.test
